﻿- Change treatment of single parent death: remove orphaned children when both parents die (instead of sparing parent from death)


Version 1.5.3

- Add option to reduce debugging log output
- Adjust text layout in options panels
- Restructure datastore
- Code cleanups


Version 1.5.2

- Spare single parents from early death (at least until the kids move out), to help prevent orphan households
- Overhaul mod conflict checking and notification
- Improve update notifications (thanks, macsergey!)
- Overhaul Harmony error notification
- Overhaul logging


Version 1.5.1

- Adjust options panel layout to accomodate longer translation strings


Version 1.5

- Add transport choices configuration editing to options panel
- Add saveable transport choices for eco residential
- Add configurable translation framework
- Add immigration options panel


Version 1.4.3

- Options panel now fully dynamic (created and destroyed on demand)
- Convert options panel layouts from UIHelper to manual layout
- Standardise logging


Version 1.4.2

- Fix sickness options panel layout not working with some panel-affecting mods
- Lifespan multiplier slider maximum extended to 15
- Performance improvement: deactivate options panel when not visible


Version 1.4.1

- Add options panel slider for lifespan multiplier
- Update bundled Cities Harmony to 1.0.5
- Improve Beta-main version conflict detection


Version 1.4

- Add vanilla lifecycle calculation option
- Extend hearse chance to deaths from sickness (as well as old age)
- Add option to enable/disable custom transport choices
- Add tabs to options panel
- Migrate to Harmony 2.0
- Add StartConnectionTransferImpl Transpiler by MacSergey
- Implement Harmony reverse patches for ResidentAI private methods
- Move mod initialisation from OnCreated to OnLoaded
- Overhaul error reporting and mod conflict notification
- Removed redundant logging detail


Version 1.3.7 -

- Add additional sickness chance logging.


Version 1.3.6 -
